WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29119
[GTK] EventSender does not properly convert some keyDown strings
https://bugs.webkit.org/show_bug.cgi?id=29119
Summary
[GTK] EventSender does not properly convert some keyDown strings
Martin Robinson
Reported
2009-09-09 23:29:02 PDT
I'm working on getting some more of the key event unit tests passing in GTK+. I noticed that some keyDown strings used in the LayoutTests are not properly converted to GDK key codes in the GTK+ EventSender.
Attachments
Patch for this issue
(3.02 KB, patch)
2009-09-09 23:36 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2009-09-09 23:36:53 PDT
Created
attachment 39325
[details]
Patch for this issue I've attached a small patch which adds more key code conversions for event sender. Key codes like '\x8' (and in general all those less than '\x20') are not converted properly by gdk_unicode_to_keyval.
Xan Lopez
Comment 2
2009-09-10 06:51:37 PDT
Comment on
attachment 39325
[details]
Patch for this issue r=me
WebKit Commit Bot
Comment 3
2009-09-10 07:04:40 PDT
Comment on
attachment 39325
[details]
Patch for this issue Clearing flags on attachment: 39325 Committed
r48253
: <
http://trac.webkit.org/changeset/48253
>
WebKit Commit Bot
Comment 4
2009-09-10 07:04:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug