2009-09-10  Martin Robinson  <martin.james.robinson@gmail.com>

[GTK] EventSender does not properly convert some keyDown strings
        https://bugs.webkit.org/show_bug.cgi?id=29119

        Add more keyDown string to character code conversions for GTK+ EventSender.

        * DumpRenderTree/gtk/EventSender.cpp:
        (keyDownCallback):

Canonical link: https://commits.webkit.org/39822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48253 268f45cc-cd09-0410-ab3c-d52691b4dbfc